# VisionQuery

./: .gitignore  README.md  plot.md  requirements.txt  setup.sh
backend/: inference.py  live_inference_test.py  llm_classes.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: config.py  dependencies.py  main.py
backend/app/routes/: live.py  query.py  video.py
backend/app/schemas/: requests.py  responses.py
backend/app/services/: inference.py  llm.py  video.py
backend/tests/: conftest.py  test_classes.py  test_live.py  test_query.py  test_upload.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: DetectionList.tsx  ErrorDisplay.tsx  Header.tsx  LiveOverlay.jsx  LiveOverlay.tsx  QueryControls.tsx  VideoOverlay.jsx  VideoOverlay.tsx  VideoUpload.tsx
frontend/src/hooks/: useClasses.ts
